# adaptive-cover-pro

./: .deploy.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  HANDOFF.md  LICENSE  README.md  TODO.md  issue-extension-plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  enhancement.yml  feature_request.yml  question.yml
.github/workflows/: close-released-issues.yml  diagnostics-required.yml  hacs.yaml  hassfest.yml  issue-autoclose.yml  issue-confirmation.yml  mark-awaiting-release.yml  notebook-validation.yml  publish-release.yml  release-issue-lifecycle.yml  tests.yml
config/: CheatSheet.md  Configuration.md  QuickStart.md  Troubleshooting.md  index.md
custom_components/adaptive_cover_pro/: __init__.py  binary_sensor.py  button.py  calculation.py  config_flow.py  config_types.py  const.py  coordinator.py  diagnostics.py  entity_base.py  enums.py  geometry.py  helpers.py  (+9 more)
docs/: ANNOUNCEMENT.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  Solar Code Review.md  UNIT_TESTS.md  VSCODE_TESTING_GUIDE.md
notebooks/: simulate_cover.ipynb  test_env.ipynb
release_notes/: README.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.1.md  issue_186_reply_draft.md  v2.10.0.md  v2.11.0.md  v2.11.1-beta.1.md  v2.12.0-beta.1.md  v2.12.0-beta.2.md  v2.12.0-beta.3.md  v2.12.0-beta.4.md  v2.12.0-beta.5.md  v2.12.0-beta.6.md  v2.12.0-beta.7.md  v2.12.0-beta.8.md  v2.12.0.md  v2.13.0.md  v2.13.1.md  v2.13.2.md  v2.13.3.md  v2.13.4.md  v2.13.5.md  v2.13.6-beta.1.md  v2.13.6-beta.2.md  v2.13.6-beta.3.md  v2.13.6-beta.4.md  v2.13.6.md  v2.13.7.md  v2.13.8-beta.1.md  v2.13.8-beta.2.md  v2.13.8-beta.3.md  v2.13.8-beta.4.md  v2.13.8.md  v2.13.9-beta.1.md  v2.13.9-beta.2.md  v2.13.9-beta.3.md  v2.13.9.md  v2.14.0.md  v2.14.1.md  v2.14.2-beta.1.md  (+112 more)
scripts/: deploy  lint  release  setup  validate_translations.py
tests/: conftest.py  cover_helpers.py  ha_helpers.py  test_active_temperature_unit.py  test_adaptive_general_cover.py  test_adaptive_horizontal_cover.py  test_adaptive_tilt_cover.py  test_adaptive_vertical_cover.py  test_auto_control_gate_matrix.py  test_binary_sensor_coverage.py  test_calculation.py  test_calculation_basics.py  test_climate_cover_data.py  test_climate_cover_state.py  test_cloud_suppression.py  test_config_entry_migration.py  test_config_flow_integration.py  test_config_flow_schema_placement.py  test_config_flow_summary.py  test_config_ux_simplification.py  test_control_state_reason.py  test_coordinator_climate_wiring.py  test_coordinator_coverage.py  test_coordinator_integration.py  test_coordinator_lifecycle.py  test_coordinator_logging.py  test_cover_command_force_gate.py  test_debug_diagnostics.py  test_decision_trace_enabled_handlers.py  test_delta_position.py  test_device_association.py  test_diagnostics_integration.py  test_display_rounding.py  test_duplicate_sync.py  test_effective_default.py  test_effective_default_integration.py  test_engine_base_coverage.py  test_entity_migration.py  test_entity_registration.py  test_entity_uniqueness_guard.py  (+70 more)
(+100 files in other folders)
