[tool.poetry]
authors = ["Bas Brussee"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3",
]
description = "Adaptive Cover Pro"
documentation = "https://github.com/jrhubott/adaptive-cover"
homepage = "https://github.com/jrhubott/adaptive-cover"
license = "Passive Aggressive License"
maintainers = ["Bas Brussee"]
name = "adaptive_cover_pro"
packages = []
readme = "README.md"
repository = "https://github.com/jrhubott/adaptive-cover"
version = "2.0.2"

[tool.poetry.dependencies]
homeassistant = ">=2025.9.0"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
hass-nabucasa = "0.75.1"
hypothesis = ">=6.0"
pre-commit = "4.0.1"
pre-commit-hooks = "5.0.0"
pylint = "3.3.1"
pytest-homeassistant-custom-component = "==0.13.280"
ruff = "0.9.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jrhubott/adaptive-cover/issues"
Changelog = "https://github.com/jrhubott/adaptive-cover/releases"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
exclude = ["notebooks/"]
src = ["custom_components/adaptive_cover_pro"]

[tool.ruff.lint]
ignore = [
  "ANN101", # Self... explanatory
  "ANN401", # Opiniated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "TID252", # Relative imports
  "RUF012", # Just broken

  # Formatter conflicts
  "COM812",
  "COM819",
  "D206",
  "E501",
  "ISC001",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["ALL"]
"tests/**/*.py" = ["D102", "D103", "D205"]
"tests/*.py" = ["D102", "D103", "D205", "E402"]
"scripts/*.py" = ["T201", "D103"]

[tool.ruff.flake8-import-conventions.extend-aliases]
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"
voluptuous = "vol"

[tool.ruff.isort]
force-sort-within-sections = true
known-first-party = [
    "homeassistant",
]
combine-as-imports = true

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by ruff
# duplicate-code - unavoidable
# used-before-assignment - false positives with TYPE_CHECKING structures
disable = [
  "format",
  "duplicate-code",
  "used-before-assignment",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=custom_components/adaptive_cover_pro",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (slower, may require Home Assistant)",
]
